--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-
-‹meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Under Construction</title>
+	<title>NutStation</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<style>
 /* Body Styles */
 body {
